--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: '^1.19.1' # The Go version to download (if necessary) and use.
+          go-version-file: '${{ github.workspace }}/go.mod'
       - name: Cache go-build and mod
         uses: actions/cache@v3
         with:
